force-app/main/default/objects/Training__c/fields/Completed_Trainings__c.field-meta.xml
<CustomField>
    <fullName>Completed_Trainings__c</fullName>
    <label>Completed Trainings</label>
    <summaryFilterItems>
        <field>Employee_Training__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Training__c.Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>