force-app/main/default/objects/Training__c/fields/Incomplete_Trainings__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Trainings__c</fullName>
    <label>Incomplete Trainings</label>
    <summaryFilterItems>
        <field>Employee_Training__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Training__c.Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>