force-app/main/default/objects/Training__c/fields/No_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Activities__c</fullName>
    <description>Number of activities related to this training</description>
    <label>No. of Activities</label>
    <summaryForeignKey>Training_Activity__c.Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>