force-app/main/default/objects/Training__c/fields/Rating_Stars__c.field-meta.xml
<CustomField>
    <fullName>Rating_Stars__c</fullName>
    <formula>IF(
    FLOOR(Rating__c) == 1, 
    IMAGE(&quot;https://falikhan-220324-576-demo.my.salesforce.com/resource/1649133118000/star_rating_1?&quot;,&quot;&quot;,107,30),
    IF(
        FLOOR(Rating__c) == 2, 
        IMAGE(&quot;https://falikhan-220324-576-demo.my.salesforce.com/resource/1649133133000/star_rating_2?&quot;,&quot;&quot;,107,30),
        IF(
            FLOOR(Rating__c) == 3, 
            IMAGE(&quot;https://falikhan-220324-576-demo.my.salesforce.com/resource/1649133146000/star_rating_3?&quot;,&quot;&quot;,107,30),
            IF(
                FLOOR(Rating__c) == 4, 
                IMAGE(&quot;https://falikhan-220324-576-demo.my.salesforce.com/resource/1649133157000/star_rating_4?&quot;,&quot;&quot;,107,30),
                IF(
                    FLOOR(Rating__c) == 5, 
                    IMAGE(&quot;https://falikhan-220324-576-demo.my.salesforce.com/resource/1649133169000/star_rating_5?&quot;,&quot;&quot;,107,30),
                    IMAGE(&quot;https://falikhan-220324-576-demo.my.salesforce.com/resource/1649135702000/star_rating_0?&quot;,&quot;&quot;,107,30)
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>