force-app/main/default/objects/Training__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <description>Sum of all ratings from completed employee trainings related to this training</description>
    <label>Total Rating</label>
    <summarizedField>Employee_Training__c.Rating__c</summarizedField>
    <summaryFilterItems>
        <field>Employee_Training__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Training__c.Training__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>