force-app/main/default/objects/Training__c/fields/Training_Image__c.field-meta.xml
<CustomField>
    <fullName>Training_Image__c</fullName>
    <label>Training Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>